# ari

./: .gitconfig  .gitignore  Cargo.toml  README.md  flake.nix
ari/: Cargo.toml
ari/src/: ast.rs  lib.rs  natural.rs  parser.rs
ari/tests/: parser.rs
ari/tests/parser/: labels.rs  naturals.rs  paths.rs  sexprs.rs  symbols.rs  top_level_scope.rs
nix/: files.nix
nix/checks/: flake-checker.nix  flake-file-checker.nix  markdownlint.nix  nixpkgs-fmt.nix  prettier.nix  readme.nix  rustfmt.nix
src/: ast.rs  lib.rs  natural.rs  parser.rs
tests/: parser.rs
tests/parser/: labels.rs  naturals.rs  paths.rs  resolved_references.rs  sexprs.rs  symbols.rs  unresolved_references.rs
