[package]
name = "ari"
description = "A type-centred purely functional programming language designed to type binary files"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
chumsky = "0.8.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"

[dev-dependencies]
pretty_assertions = "1.2.1"
