[package]
name = "ari"
description = "A type-centred purely functional programming language designed to type binary files"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
chumsky = "0.9.3"
num-bigint = "0.4.4"
num-traits = "0.2.17"

[dev-dependencies]
pretty_assertions = "1.4.0"
